# stackup-Eminence

./: README.md  main.py  pyproject.toml
.github/: issue_template.md  pull_request_template.md
docs/: README.md
resources/: README.md
src/: __init__.py  auth.py  models.py
src/templates/base/: base_home.html
src/templates/home/: home.html
src/views/: home.py
tests/: README.md
