[tool.poetry]
name = "eventbox"
version = "0.1.0"
description = ""
authors = ["winter_x64 <75623356+winter-x64@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.0"
firebase-admin = "^6.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
